[tool.poetry]
name = "piledesign"
version = "0.1.0"
description = ""
authors = ["Vasse <egilmonsas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
streamlit = "^1.14.0"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
